syntax = "proto3";

package tag.v1;

import "google/api/annotations.proto";

option go_package = "github.com/nakatanakatana/feed-reader/gen/go/tag/v1;tagv1";

service TagService {
  rpc CreateTag(CreateTagRequest) returns (CreateTagResponse);
  rpc ListTags(ListTagsRequest) returns (ListTagsResponse) {
    option (google.api.http).get = "/tag.v1.TagService/ListTags";
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc DeleteTag(DeleteTagRequest) returns (DeleteTagResponse);
}

message Tag {
  string id = 1;
  string name = 2;
  string created_at = 3;
  string updated_at = 4;
  int64 unread_count = 5;
  int64 feed_count = 6;
}

message ListTag {
  string id = 1;
  string name = 2;
  int64 unread_count = 3;
  int64 feed_count = 4;
}

message CreateTagRequest {
  string name = 1;
}

message CreateTagResponse {
  Tag tag = 1;
}

message ListTagsRequest {}

message ListTagsResponse {
  repeated ListTag tags = 1;
  int64 total_unread_count = 2;
}

message DeleteTagRequest {
  string id = 1;
}

message DeleteTagResponse {}
